Fix text wrapping issue on ContentBody component

--- a/src/components/ContentBody/index.module.css
+++ b/src/components/ContentBody/index.module.css
@@ -15,6 +15,7 @@
 
 .wrapper {
   margin: 4vh auto;
+  word-wrap: break-word;
 
   /* & :--headingElements {
     margin-bottom: -1rem;
